Installed DndKit and made each list item drag and droppable.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^1.0.0",
+    "@dnd-kit/modifiers": "^1.0.1",
+    "@dnd-kit/sortable": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
