--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.eslintcache
 /src/assets
 
 # testing
@@ -19,6 +18,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+debug.log
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
