--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "top10s",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@dnd-kit/core": "^1.0.0",
     "@dnd-kit/modifiers": "^1.0.1",
@@ -17,6 +18,8 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/react-redux": "^7.1.16",
     "@types/react-router": "^5.1.11"
   }
