--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/react-redux": "^7.1.16",
-    "@types/react-router": "^5.1.11"
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
