--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
@@ -58,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@types/express": "^4.17.11",
     "@types/react-redux": "^7.1.16",
     "@types/react-router": "^5.1.11",
