--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.10",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors-anywhere": "^0.4.3",
     "express": "^4.17.1",
     "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
