--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,9 +6,8 @@
     "main": "server.js",
     "dependencies": {
       "express": "^4.17.2",
-      "mysql": "^2.18.1",
-      "@aws-sdk/client-s3": "^3.32.0",
-      "@aws-sdk/node-http-handler": "^3.32.0"
+      "mongoose": "^5.11.14",
+      "body-parser": "^1.19.0"
     },
     "type": "module",
     "scripts": {
