Fixed lingering Docker compose errors. Containers successfully networked now.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,7 @@
 #This will make it so Docker ignores the backend Node.js Docker image and other unrelated folders
+/build
 /node_modules
 /src/server
 /src/nginx
 /npm-debug.log
+.gitignore
