--- a/src/nginx/default.conf
+++ b/src/nginx/default.conf
@@ -3,8 +3,8 @@ upstream react-top10 {
   server react-top10:3000;
 }
 
-upstream backend {
-  server backend:3020;
+upstream express {
+  server express:3001;
 }
 
 server {
