--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node
+FROM node:16-alpine3.13
 
 # Creates the app directory /home/node_app
 # Copies all files from the CURRENT directory (nothing above server/) into the destination /home/node_app
@@ -9,8 +9,7 @@ WORKDIR /home/node_app/
 
 # Installs app dependencies (express, mySQL) from package.json
 RUN npm install
-RUN apt-get update
-RUN apt-get install nano
+RUN NODE_OPTIONS=--openssl-legacy-provider
 
 # Exposes Port 3001 for connection
 EXPOSE 3001
