--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "top10s",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
   "dependencies": {
     "@dnd-kit/core": "^1.0.0",
     "@dnd-kit/modifiers": "^1.0.1",
@@ -35,8 +34,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
