--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,7 +9,7 @@
       "mongoose": "^5.11.14",
       "body-parser": "^1.19.0"
     },
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
       "start": "node server.js"
     }
